--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css?family=Montserrat:400,700');
+@import url('https://fonts.googleapis.com/css?family=Roboto+Slab');
 
 /*General styles*/
 body {
@@ -26,7 +27,7 @@ $accent-color: #fed136;
     margin-top: 10px;
     font-family: inherit;
     font-size: 18px;
-    font-weight: bold;
+    font-weight: 700;
     transition: 0.3s;
     &:hover {
         background-color: white;
@@ -42,10 +43,10 @@ header {
     &::before {
         content: "";
         background-size: cover;
-        position: fixed;
+        position: absolute;
         display: block;
-        width: 100%;
-        height: 100%;
+        width: 100vw;
+        height: 100vh;
         background-image: url('../images/background-image.png'); 
         left: 0;
         right: 0;
@@ -84,11 +85,53 @@ header {
         letter-spacing: -1px;
     }
     p {
-        font-weight: bold;
+        font-weight: 700;
         font-size: 75px;
     }
     button {
         @include button;
+    }
+}
+/*Styles for section: services*/
+.services {
+    h1 {
+        font-size: 40px;
+        font-weight: 700;
+        color: #222222;
+    }
+    p {
+        font-family: sloganFont;
+        font-size: 16px;
+        color: #777777;
+    }
+    .row {
+        margin-top: 100px;
+        .col-md-4 {
+            padding: 0 20px;
+            margin-bottom: 50px;
+        }
+        .fa {
+            font-size: 40px;
+            color: $accent-color;
+            border: 4px solid $accent-color;
+            border-radius: 50%;
+            width: 80px;
+            height: 80px;
+            position: relative;
+            &::before {
+                width: 70px;
+                position: absolute;
+                left: 0;
+                top: 14px;
+            }
+        }
+        h1 {
+            font-size: 18px;
+        }
+        p {
+            font-size: 14px;
+            font-family: 'Roboto Slab', serif;
+        }
     }
 }
 
