--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,21 +1,12 @@
 @import url('https://fonts.googleapis.com/css?family=Montserrat:400,700');
 @import url('https://fonts.googleapis.com/css?family=Roboto+Slab');
 
-/*General styles*/
-body {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: 'Montserrat', sans-serif;
-}
-.container {
-    padding-top: 50px;
-    padding-bottom: 50px;
-}
 /*Variables*/
 $accent-color: #fed136;
+$headers-color: #222222;
+$paragraph-color: #777777;
 @font-face {
-    font-family: sloganFont;
+    font-family: secondMainFont;
     src: url('../fonts/droid-serif.italic.ttf');
 }
 @mixin button {
@@ -34,10 +25,42 @@ $accent-color: #fed136;
         color: $accent-color;
     }
 }
-
+/*General styles*/
+body {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: 'Montserrat', sans-serif;
+}
+.container {
+    padding-top: 50px;
+    padding-bottom: 50px;
+}
+.container-fluid {
+    padding: 0;
+}
+h1 {
+    font-size: 40px;
+    font-weight: 700;
+    color: $headers-color;
+}
+p {
+    font-family: secondMainFont;
+    font-size: 16px;
+    color: $paragraph-color;
+}
+.row {
+    h1 {
+        font-size: 18px;
+    }
+    p {
+        font-size: 14px;
+        font-family: 'Roboto Slab', serif;
+    }
+}
 /*Styles for section: header*/
 header {
-    height: 100vh;
+    min-height: 100vh;
     color: white;
     position: relative;
     &::before {
@@ -45,7 +68,7 @@ header {
         background-size: cover;
         position: absolute;
         display: block;
-        height: 100vh;
+        min-height: 100vh;
         background-image: url('../images/background-image.png'); 
         left: 0;
         right: 0;
@@ -78,36 +101,22 @@ header {
 }
 .hero {
     margin-top: 30vh;
-    h1 {
-        font-family: sloganFont;
+    h2 {
+        font-family: secondMainFont;
         font-size: 40px;
         letter-spacing: -1px;
     }
     p {
         font-weight: 700;
         font-size: 75px;
+        font-family: 'Montserrat', sans-serif;
+        color: white;
     }
     button {
         @include button;
     }
 }
 /*Styles for section: services*/
-.services h1,
-.portfolio h1,
-.about h1,
-.team h1 {
-    font-size: 40px;
-    font-weight: 700;
-    color: #222222;
-}
-.services p,
-.portfolio p,
-.about p,
-.team p {
-    font-family: sloganFont;
-    font-size: 16px;
-    color: #777777;
-}
 .services {
     .row {
         margin-top: 100px;
@@ -123,19 +132,17 @@ header {
             width: 80px;
             height: 80px;
             position: relative;
+            transition: 0.5s;
             &::before {
                 width: 70px;
                 position: absolute;
                 left: 0;
                 top: 14px;
             }
-        }
-        h1 {
-            font-size: 18px;
-        }
-        p {
-            font-size: 14px;
-            font-family: 'Roboto Slab', serif;
+            &:hover {
+                border-color: $headers-color;
+                color: $headers-color;
+            }
         }
     }
 }
@@ -143,6 +150,7 @@ header {
 .portfolio {
     background-color: #f7f7f7;
     .row {
+        margin-top: 50px;
         .col-md-4 {
             display: flex;
             flex-direction: column;
@@ -152,11 +160,10 @@ header {
                 width: 291px;
             }
             h1 {
-                font-size: 18px;
                 padding-top: 20px;
             }
             p {
-                font-size: 14px;
+                font-family: secondMainFont;
                 padding-bottom: 20px;
             }
             h1, p {
@@ -184,6 +191,7 @@ header {
                     color: #CCA45D;
                     border: 2px solid #CCA45D;
                     padding: 5px;
+                    transition: 1s;
                 }
                 &:hover {
                     background-color: rgba(0, 0, 0, 0.8);
@@ -205,30 +213,20 @@ header {
             top: -6px;
         }
         h1 {
-            font-size: 18px;
             margin-top: 0;
         }
-        p {
-            font-size: 14px;
-            font-family: 'Roboto Slab', serif;
-        }
     }
-    .image-box {
+    .col-md-12 {
         display: flex;
-        position: relative;
         justify-content: center;
     }
-    .layer {
-        background-color: #f1f1f1;
-        width: 174px;
-        height: 174px;
-        top: -2px;
-        border-radius: 50%;
-        z-index: 1;
-        position: absolute;
-    }
     img {
-        z-index: 100;
+       border: 7px solid #f1f1f1;
+       border-radius: 50%;
+       transition: 0.5s;
+       &:hover {
+           border-color: $accent-color;
+       }
     }
     .line-box {
         display: flex;
@@ -240,17 +238,21 @@ header {
         height: 95px;
     }
     .gold-circle {
+        border: 7px solid #f1f1f1;
         height: 160px;
         width: 160px;
-        z-index: 1;
         border-radius: 50%;
         display: flex;
         flex-direction: column;
         justify-content: center;
-        background-color: #fed136;
+        background-color: $accent-color;
+        transition: 0.5s;
         h1 {
             color: white;
             text-shadow: 1px 0px 1px rgba(0, 0, 0, 0.7);
+        }
+        &:hover {
+            border-color: $accent-color;
         }
     }
 }
@@ -259,15 +261,12 @@ header {
     background-color: #f7f7f7;
     .text-padding {
         padding: 0 200px;
+        font-family: 'Roboto Slab', serif;
     }
     .row {
         margin-top: 100px;
         h1 {
             font-size: 16px;
-        }
-        p {
-            font-size: 14px;
-            font-family: 'Roboto Slab', serif;
         }
     }
     img {
@@ -276,23 +275,90 @@ header {
         border-radius: 50%;
         object-fit: cover;
     }
-    .fa {
-        font-size: 20px;
-        border: 3px solid #222222;
+}
+.team .fa,
+footer .fa {
+    font-size: 20px;
+    border: 3px solid $headers-color;
+    padding: 10px;
+    width: 45px;
+    height: 45px;
+    border-radius: 50%;
+    margin-bottom: 50px;
+    &:hover {
+        color: $accent-color;
+        border-color: $accent-color;
+    }
+}
+/*Styles for section: software*/
+.software .col-md-3 {
+    margin-bottom: 20px;
+}
+/*Styles for section: contact*/
+.contact {
+    background-color: $headers-color;
+    height: 100vh;
+    position: relative;
+    img {
+        position: absolute;
+        right: 0;
+        bottom: 0;
+        max-width: 614px;
+        max-height: 646px;
+    }
+    h1 {
+        color: white;
+    }
+    .row {
+        margin-top: 100px;
+    }
+    input,
+    textarea {
+        width: 100%;
+        padding-left: 10px;
+        height: 50px;
+        border: 1px solid black;
+        border-radius: 3px;
+        &:nth-of-type(1),
+        &:nth-of-type(2) {
+            margin-bottom: 25px;
+        }
+        &::placeholder {
+           color: #bbbbbb;
+           font-size: 14px;
+           font-weight: 700;
+        }
+    }
+    textarea {
+        height: 200px;
         padding: 10px;
-        width: 45px;
-        height: 45px;
-        border-radius: 50%;
-        margin-bottom: 50px;
+    }
+    button {
+        @include button;
+    }
+}
+/*Styles for section: footer*/
+footer {
+    display: flex;
+    align-items: center;
+    p {
+        color: #555555;
+        margin: 0;
+        padding: 10px 100px 10px 10px;
+        font-family: 'Montserrat', sans-serif;
+        font-size: 14px;
+    }
+    .fa {
+        color: white;
+        background-color: $headers-color;
+        margin-bottom: 0;
+        margin-right: 10px;
     }
 }
 
 /*Media queries*/
 @media (max-width: 767px) {
     /*Styles for section: header*/
-    .header {
-        height: auto;
-    }
     .navbar-inverse {
         .navbar-nav {
             width: 100%;
@@ -300,14 +366,21 @@ header {
         }
     }
     .hero {
-        margin-top: 7vh;
-        h1 {
+        margin-top: 12vh;
+        h2 {
             font-size: 30px;
         }
         p {
             font-size: 45px;
         }
     } 
+    /*Styles for section: footer*/
+    footer {
+        flex-direction: column;
+        p {
+            padding-right: 0;
+        }
+    }
 }
 @media (max-width: 991px) {
     /*Styles for section: about*/
@@ -332,5 +405,28 @@ header {
     /*Styles for section: team*/
     .team .text-padding {
         padding: 0;
+    }
+    /*Styles for section: contact*/
+    .contact {
+        height: auto;
+        .row {
+            margin-top: 50px;
+        }
+        .col-md-6 {
+            text-align: center;
+            margin-bottom: 50px;
+        }
+    }
+}
+@media (max-width: 500px) {
+    /*Styles for section: header*/
+    .hero {
+        margin-top: 2vh;
+        h2 {
+            font-size: 25px;
+        }
+        p {
+            font-size: 35px;
+        }
     }
 }
